# systemd-spawn

./: Cargo.toml  flake.nix
src/: main.rs
